--- a/index.html
+++ b/index.html
@@ -25,25 +25,93 @@
 <body>
     <header>
         <!-- Navbar Section -->
-        <nav class="mx-28 px-10 py-3 bg-[#F85559] flex justify-between items-center rounded-full ">
-            <div class="flex space-x-4 text-white font-medium text-sm">
+        <nav
+            class="mx-28 lg:my-10 px-10 py-3 bg-white lg:bg-[#F85559] block lg:flex justify-between items-center rounded-full ">
+            <div class="hidden lg:flex space-x-4 text-white font-medium text-sm">
                 <a href="#">Home</a>
                 <a href="#">About us</a>
                 <a href="#">Shop</a>
                 <a href="#">All Fruits</a>
             </div>
-            <div class="flex items-center space-x-3">
+            <div class="flex justify-start lg:justify-normal items-center  space-x-3">
                 <img src="./images/logo.png" alt="">
-                <h2 class="text-4xl font-bold text-white">Fruit Burst</h2>
+                <h2 class="text-4xl font-bold text-black lg:text-white">Fruit Burst</h2>
             </div>
-            <div class="flex bg-white px-4 py-2 rounded-full">
+            <div class="hidden lg:flex bg-white px-4 py-2 rounded-full">
                 <input type="search" name="search" id="search" placeholder="search">
-                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
-                    <path stroke-linecap="round" stroke-linejoin="round" d="M21 21l-5.197-5.197m0 0A7.5 7.5 0 105.196 5.196a7.5 7.5 0 0010.607 10.607z" />
-                  </svg>
-                  
+                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                    stroke="currentColor" class="w-6 h-6">
+                    <path stroke-linecap="round" stroke-linejoin="round"
+                        d="M21 21l-5.197-5.197m0 0A7.5 7.5 0 105.196 5.196a7.5 7.5 0 0010.607 10.607z" />
+                </svg>
             </div>
         </nav>
+
+        <!-- Banner Section -->
+        <section class="mx-28 ">
+            <div class="carousel w-full rounded-lg">
+                <!-- Slider 01 -->
+                <div id="slide1" class="h-96 carousel-item relative  w-full" style="background-image: linear-gradient(rgba(0, 0, 0, 0.5),
+                rgba(0, 0, 0, 0.5)), url('./images/banner1.png'); background-position: center; background-repeat: no-repeat; background-size: cover;">
+                <div style="width: 600px;" class="mx-auto text-center pt-12 space-y-3">
+                    <h2 class="text-white text-6xl font-semibold">Exotic tastes at your<br> doorstep</h2>
+                    <p class="text-white text-base">We supply highly quality organic products</p>
+                    <button class="btn btn-error bg-[#F85559] text-white">Shop Now</button>
+                </div>
+                    <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+                        <a href="#slide4" class="btn btn-circle">❮</a>
+                        <a href="#slide2" class="btn btn-circle">❯</a>
+                    </div>
+                </div>
+                <!-- Slider 02 -->
+                <div id="slide2" class="h-96 carousel-item relative  w-full" style="background-image: linear-gradient(rgba(0, 0, 0, 0.5),
+                rgba(0, 0, 0, 0.5)), url('./images/banner2.png'); background-position: center; background-repeat: no-repeat; background-size: cover;">
+                <div style="width: 600px;" class="mx-auto text-center pt-12 space-y-3">
+                    <h2 class="text-white text-6xl font-semibold">Exotic tastes at your<br> doorstep</h2>
+                    <p class="text-white text-base">We supply highly quality organic products</p>
+                    <button class="btn btn-error bg-[#F85559] text-white">Shop Now</button>
+                </div>
+                    <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+                        <a href="#slide1" class="btn btn-circle">❮</a>
+                        <a href="#slide3" class="btn btn-circle">❯</a>
+                    </div>
+                </div>
+                <!-- Slider 03 -->
+                <div id="slide3" class="h-96 carousel-item relative  w-full" style="background-image: linear-gradient(rgba(0, 0, 0, 0.5),
+                rgba(0, 0, 0, 0.5)), url('./images/banner3.png'); background-position: center; background-repeat: no-repeat; background-size: cover;">
+                <div style="width: 600px;" class="mx-auto text-center pt-12 space-y-3">
+                    <h2 class="text-white text-6xl font-semibold">Exotic tastes at your<br> doorstep</h2>
+                    <p class="text-white text-base">We supply highly quality organic products</p>
+                    <button class="btn btn-error bg-[#F85559] text-white">Shop Now</button>
+                </div>
+                    <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+                        <a href="#slide2" class="btn btn-circle">❮</a>
+                        <a href="#slide4" class="btn btn-circle">❯</a>
+                    </div>
+                </div>
+                <div id="slide4" class="h-96 carousel-item relative  w-full" style="background-image: linear-gradient(rgba(0, 0, 0, 0.5),
+                rgba(0, 0, 0, 0.5)), url('./images/banner4.png'); background-position: center; background-repeat: no-repeat; background-size: cover;">
+                <div style="width: 600px;" class="mx-auto text-center pt-12 space-y-3">
+                    <h2 class="text-white text-6xl font-semibold">Exotic tastes at your<br> doorstep</h2>
+                    <p class="text-white text-base">We supply highly quality organic products</p>
+                    <button class="btn btn-error bg-[#F85559] text-white">Shop Now</button>
+                </div>
+                    <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+                        <a href="#slide3" class="btn btn-circle">❮</a>
+                        <a href="#slide1" class="btn btn-circle">❯</a>
+                    </div>
+                </div>
+            </div>
+            <div class="py-3 flex justify-around mx-10 relative bottom-16 bg-white rounded-lg" style="box-shadow: 0px 8px 60px 0px rgba(0, 0, 0, 0.05);">
+                <img class="w-32 h-28" src="./images/fruit1.png" alt="">
+                <img class="w-32 h-28" src="./images/fruit2.png" alt="">
+                <img class="w-32 h-28" src="./images/fruit3.png" alt="">
+                <img class="w-32 h-28" src="./images/fruit4.png" alt="">
+                <img class="w-32 h-28" src="./images/fruit5.png" alt="">
+            </div>
+        </section>
+
+
     </header>
     <main>
 
