--- a/index.html
+++ b/index.html
@@ -313,7 +313,89 @@
 
 
         <!-- Why Choose Us Section -->
-        
+        <section class="mx-28 my-28">
+            <div class="text-center space-y-3">
+                <h2 class="text-4xl font-bold">Why Choose Us? </h2>
+                <p class="text-sm font-normal ">Contrary to popular belief, is not simply random text. It has roots in a piece of classical<br> Latin literature from 45 BC, making it over 2000 years old.</p>
+            </div>
+            <div class="flex justify-center gap-10 mt-10">
+                <div class="text-left">
+                    <div class="flex justify-center items-baseline">
+                        <div>
+                            <i class="fa-solid fa-user fa-2xl px-5" style="color: #ee5559;"></i>
+                        </div>
+                        <div>
+                            <h2 class="text-2xl font-bold py-2">Dedicated Team</h2>
+                            <hr style="border-top: 1px solid #8c8b8b;width:100%; ">
+                            <p class="text-sm font-normal text-black py-2">Professional employees are there for you to pick<br>
+                                 the most amazing and fresh fruits.</p>
+                        </div>
+                    </div>
+                    <div class="flex justify-center items-baseline">
+                        <div>
+                            <i class="fa-solid fa-heart fa-2xl px-5" style="color: #f05059;"></i>
+                        </div>
+                        <div>
+                            <h2 class="text-2xl font-bold py-2">Fresh Is Best</h2>
+                            <hr style="border-top: 1px solid #8c8b8b;width:100%; ">
+                            <p class="text-sm font-normal text-black py-2">Professional employees are there for you to pick<br>
+                                 the most amazing and fresh fruits.</p>
+                        </div>
+                    </div>
+                    <div class="flex justify-center items-baseline">
+                        <div>
+                            <i class="fa-solid fa-gift fa-2xl px-5" style="color: #fa5059;"></i>
+                        </div>
+                        <div>
+                            <h2 class="text-2xl font-bold py-2">Gift Certificates</h2>
+                            <hr style="border-top: 1px solid #8c8b8b;width:100%; ">
+                            <p class="text-sm font-normal text-black py-2">Professional employees are there for you to pick<br>
+                                 the most amazing and fresh fruits.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="mt-5">
+                    <img src="./images/whychoose1.png" alt="">
+                </div>
+                <div>
+                    <div>
+                        <div class="flex flex-row-reverse justify-center items-baseline">
+                            <div>
+                                <i class="fa-solid fa-face-kiss fa-2xl px-5" style="color: #fa5059;"></i>
+                            </div>
+                            <div class="mr-0 text-right">
+                                <h2 class="text-2xl font-bold py-2">Integrated Supplier</h2>
+                                <hr style="border-top: 1px solid #8c8b8b;width:100%; ">
+                                <p class="text-sm font-normal text-black py-2">Professional employees are there for you to pick<br>
+                                     the most amazing and fresh fruits.</p>
+                            </div>
+                        </div>
+                        <div class="flex flex-row-reverse justify-center items-baseline">
+                            <div>
+                                <i class="fa-solid fa-ice-cream fa-2xl px-5" style="color: #fa5059;"></i>
+                            </div>
+                            <div class="mr-0 text-right">
+                                <h2 class="text-2xl font-bold py-2">Sustainable Practice</h2>
+                                <hr style="border-top: 1px solid #8c8b8b;width:100%; ">
+                                <p class="text-sm font-normal text-black py-2">Professional employees are there for you to pick<br>
+                                     the most amazing and fresh fruits.</p>
+                            </div>
+                        </div>
+                        <div class="flex flex-row-reverse justify-center items-baseline">
+                            <div>
+                                <i class="fa-solid fa-thumbs-up fa-2xl px-5" style="color: #fa5059;"></i>
+                            </div>
+                            <div class="mr-0 text-right">
+                                <h2 class="text-2xl font-bold py-2">The Benefits Only</h2>
+                                <hr style="border-top: 1px solid #8c8b8b; width:100%;">
+                                <p class="text-sm font-normal text-black py-2">Professional employees are there for you to pick<br>
+                                     the most amazing and fresh fruits.</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
 
 
     </main>
