Added the Modal

--- a/index.html
+++ b/index.html
@@ -180,7 +180,27 @@
                             <input type="radio" name="rating-2" class="mask mask-star-2 bg-[#F85559]" />
                         </div>
                         <div class="card-actions">
-                            <a class=" text-[#F85559] font-semibold pt-5" href="">Details Now</a>
+                            <!-- <a class=" text-[#F85559] font-semibold pt-5" href="">Details Now</a> -->
+                            <!-- Open the modal using ID.showModal() method -->
+                            <button class="text-[#F85559] font-semibold pt-5" onclick="my_modal_1.showModal()">Details Now</button>
+                            <dialog id="my_modal_1" class="modal">
+                                <div class="bg-white px-28 py-16 flex flex-col items-center rounded-lg">
+                                    <img class="" src="./images/fruit6.png" alt="">
+                                    <h2 class="text-5xl font-bold">Apples</h2>
+                                    <p class="text-sm font-normal py-5">Professional employees are there for you to pick<br> the most amazing and fresh fruits.</p>
+                                    <div class="rating pt-5 py-5">
+                                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-[#F85559]" />
+                                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-[#F85559]" checked />
+                                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-[#F85559]" />
+                                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-[#F85559]" />
+                                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-[#F85559]" />
+                                    </div>
+                                    <div>
+                                        <button class="btn btn-error text-[#F85559] bg-white border border-[#F85559]">Close</button>
+                                        <button class="btn btn-error bg-[#F85559] text-white">Buy Now</button>
+                                    </div>
+                                </div>
+                            </dialog>
                         </div>
                     </div>
                 </div>
@@ -193,7 +213,7 @@
                     <div class="card-body items-center text-center">
                         <h2 class="card-title">12.90$ - 18.85$</h2>
                         <hr style="color: black; width:70%;">
-                        <p>Apples</p>
+                        <p>Oranges</p>
                         <div class="rating pt-5">
                             <input type="radio" name="rating-2" class="mask mask-star-2 bg-[#F85559]" />
                             <input type="radio" name="rating-2" class="mask mask-star-2 bg-[#F85559]" checked />
@@ -202,7 +222,27 @@
                             <input type="radio" name="rating-2" class="mask mask-star-2 bg-[#F85559]" />
                         </div>
                         <div class="card-actions">
-                            <a class=" text-[#F85559] font-semibold pt-5" href="">Details Now</a>
+                            <!-- <a class=" text-[#F85559] font-semibold pt-5" href="">Details Now</a> -->
+                            <!-- Open the modal using ID.showModal() method -->
+                            <button class="text-[#F85559] font-semibold pt-5" onclick="my_modal_2.showModal()">Details Now</button>
+                            <dialog id="my_modal_2" class="modal">
+                                <div class="bg-white px-28 py-16 flex flex-col items-center rounded-lg">
+                                    <img class="" src="./images/fruit7.png" alt="">
+                                    <h2 class="text-5xl font-bold">Oranges</h2>
+                                    <p class="text-sm font-normal py-5">Professional employees are there for you to pick<br> the most amazing and fresh fruits.</p>
+                                    <div class="rating pt-5 py-5">
+                                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-[#F85559]" />
+                                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-[#F85559]" checked />
+                                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-[#F85559]" />
+                                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-[#F85559]" />
+                                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-[#F85559]" />
+                                    </div>
+                                    <div>
+                                        <button class="btn btn-error text-[#F85559] bg-white border border-[#F85559]">Close</button>
+                                        <button class="btn btn-error bg-[#F85559] text-white">Buy Now</button>
+                                    </div>
+                                </div>
+                            </dialog>
                         </div>
                     </div>
                 </div>
@@ -215,7 +255,7 @@
                     <div class="card-body items-center text-center">
                         <h2 class="card-title">12.90$ - 18.85$</h2>
                         <hr style="color: black; width:70%;">
-                        <p>Apples</p>
+                        <p>Red Dragon</p>
                         <div class="rating pt-5">
                             <input type="radio" name="rating-2" class="mask mask-star-2 bg-[#F85559]" />
                             <input type="radio" name="rating-2" class="mask mask-star-2 bg-[#F85559]" checked />
@@ -224,7 +264,27 @@
                             <input type="radio" name="rating-2" class="mask mask-star-2 bg-[#F85559]" />
                         </div>
                         <div class="card-actions">
-                            <a class=" text-[#F85559] font-semibold pt-5" href="">Details Now</a>
+                            <!-- <a class=" text-[#F85559] font-semibold pt-5" href="">Details Now</a> -->
+                            <!-- Open the modal using ID.showModal() method -->
+                            <button class="text-[#F85559] font-semibold pt-5" onclick="my_modal_3.showModal()">Details Now</button>
+                            <dialog id="my_modal_3" class="modal">
+                                <div class="bg-white px-28 py-16 flex flex-col items-center rounded-lg">
+                                    <img class="" src="./images/fruit8.png" alt="">
+                                    <h2 class="text-5xl font-bold">Red Dragon</h2>
+                                    <p class="text-sm font-normal py-5">Professional employees are there for you to pick<br> the most amazing and fresh fruits.</p>
+                                    <div class="rating pt-5 py-5">
+                                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-[#F85559]" />
+                                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-[#F85559]" checked />
+                                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-[#F85559]" />
+                                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-[#F85559]" />
+                                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-[#F85559]" />
+                                    </div>
+                                    <div>
+                                        <button class="btn btn-error text-[#F85559] bg-white border border-[#F85559]">Close</button>
+                                        <button class="btn btn-error bg-[#F85559] text-white">Buy Now</button>
+                                    </div>
+                                </div>
+                            </dialog>
                         </div>
                     </div>
                 </div>
@@ -237,7 +297,7 @@
                     <div class="card-body items-center text-center">
                         <h2 class="card-title">12.90$ - 18.85$</h2>
                         <hr style="color: black; width:70%;">
-                        <p>Apples</p>
+                        <p>Banana</p>
                         <div class="rating pt-5">
                             <input type="radio" name="rating-2" class="mask mask-star-2 bg-[#F85559]" />
                             <input type="radio" name="rating-2" class="mask mask-star-2 bg-[#F85559]" checked />
@@ -246,7 +306,27 @@
                             <input type="radio" name="rating-2" class="mask mask-star-2 bg-[#F85559]" />
                         </div>
                         <div class="card-actions">
-                            <a class=" text-[#F85559] font-semibold pt-5" href="">Details Now</a>
+                            <!-- <a class=" text-[#F85559] font-semibold pt-5" href="">Details Now</a> -->
+                            <!-- Open the modal using ID.showModal() method -->
+                            <button class="text-[#F85559] font-semibold pt-5" onclick="my_modal_4.showModal()">Details Now</button>
+                            <dialog id="my_modal_4" class="modal">
+                                <div class="bg-white px-28 py-16 flex flex-col items-center rounded-lg">
+                                    <img class="" src="./images/fruit9.png" alt="">
+                                    <h2 class="text-5xl font-bold">Banana</h2>
+                                    <p class="text-sm font-normal py-5">Professional employees are there for you to pick<br> the most amazing and fresh fruits.</p>
+                                    <div class="rating pt-5 py-5">
+                                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-[#F85559]" />
+                                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-[#F85559]" checked />
+                                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-[#F85559]" />
+                                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-[#F85559]" />
+                                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-[#F85559]" />
+                                    </div>
+                                    <div>
+                                        <button class="btn btn-error text-[#F85559] bg-white border border-[#F85559]">Close</button>
+                                        <button class="btn btn-error bg-[#F85559] text-white">Buy Now</button>
+                                    </div>
+                                </div>
+                            </dialog>
                         </div>
                     </div>
                 </div>
@@ -316,7 +396,8 @@
         <section class="mx-28 my-28">
             <div class="text-center space-y-3">
                 <h2 class="text-4xl font-bold">Why Choose Us? </h2>
-                <p class="text-sm font-normal ">Contrary to popular belief, is not simply random text. It has roots in a piece of classical<br> Latin literature from 45 BC, making it over 2000 years old.</p>
+                <p class="text-sm font-normal ">Contrary to popular belief, is not simply random text. It has roots in a
+                    piece of classical<br> Latin literature from 45 BC, making it over 2000 years old.</p>
             </div>
             <div class="flex justify-center gap-10 mt-10">
                 <div class="text-left">
@@ -327,8 +408,9 @@
                         <div>
                             <h2 class="text-2xl font-bold py-2">Dedicated Team</h2>
                             <hr style="border-top: 1px solid #8c8b8b;width:100%; ">
-                            <p class="text-sm font-normal text-black py-2">Professional employees are there for you to pick<br>
-                                 the most amazing and fresh fruits.</p>
+                            <p class="text-sm font-normal text-black py-2">Professional employees are there for you to
+                                pick<br>
+                                the most amazing and fresh fruits.</p>
                         </div>
                     </div>
                     <div class="flex justify-center items-baseline">
@@ -338,8 +420,9 @@
                         <div>
                             <h2 class="text-2xl font-bold py-2">Fresh Is Best</h2>
                             <hr style="border-top: 1px solid #8c8b8b;width:100%; ">
-                            <p class="text-sm font-normal text-black py-2">Professional employees are there for you to pick<br>
-                                 the most amazing and fresh fruits.</p>
+                            <p class="text-sm font-normal text-black py-2">Professional employees are there for you to
+                                pick<br>
+                                the most amazing and fresh fruits.</p>
                         </div>
                     </div>
                     <div class="flex justify-center items-baseline">
@@ -349,8 +432,9 @@
                         <div>
                             <h2 class="text-2xl font-bold py-2">Gift Certificates</h2>
                             <hr style="border-top: 1px solid #8c8b8b;width:100%; ">
-                            <p class="text-sm font-normal text-black py-2">Professional employees are there for you to pick<br>
-                                 the most amazing and fresh fruits.</p>
+                            <p class="text-sm font-normal text-black py-2">Professional employees are there for you to
+                                pick<br>
+                                the most amazing and fresh fruits.</p>
                         </div>
                     </div>
                 </div>
@@ -366,8 +450,9 @@
                             <div class="mr-0 text-right">
                                 <h2 class="text-2xl font-bold py-2">Integrated Supplier</h2>
                                 <hr style="border-top: 1px solid #8c8b8b;width:100%; ">
-                                <p class="text-sm font-normal text-black py-2">Professional employees are there for you to pick<br>
-                                     the most amazing and fresh fruits.</p>
+                                <p class="text-sm font-normal text-black py-2">Professional employees are there for you
+                                    to pick<br>
+                                    the most amazing and fresh fruits.</p>
                             </div>
                         </div>
                         <div class="flex flex-row-reverse justify-center items-baseline">
@@ -377,8 +462,9 @@
                             <div class="mr-0 text-right">
                                 <h2 class="text-2xl font-bold py-2">Sustainable Practice</h2>
                                 <hr style="border-top: 1px solid #8c8b8b;width:100%; ">
-                                <p class="text-sm font-normal text-black py-2">Professional employees are there for you to pick<br>
-                                     the most amazing and fresh fruits.</p>
+                                <p class="text-sm font-normal text-black py-2">Professional employees are there for you
+                                    to pick<br>
+                                    the most amazing and fresh fruits.</p>
                             </div>
                         </div>
                         <div class="flex flex-row-reverse justify-center items-baseline">
@@ -388,8 +474,9 @@
                             <div class="mr-0 text-right">
                                 <h2 class="text-2xl font-bold py-2">The Benefits Only</h2>
                                 <hr style="border-top: 1px solid #8c8b8b; width:100%;">
-                                <p class="text-sm font-normal text-black py-2">Professional employees are there for you to pick<br>
-                                     the most amazing and fresh fruits.</p>
+                                <p class="text-sm font-normal text-black py-2">Professional employees are there for you
+                                    to pick<br>
+                                    the most amazing and fresh fruits.</p>
                             </div>
                         </div>
                     </div>
