Last Push as I couldn't make it responsive

--- a/index.html
+++ b/index.html
@@ -23,6 +23,10 @@
 
     <!-- Font Awesome -->
     <script src="https://kit.fontawesome.com/f2a899913e.js" crossorigin="anonymous"></script>
+
+    
+    <!-- FavIcon -->
+    <link rel="shortcut icon" href="./images/logo.png" type="image/x-icon">
 </head>
 
 <body>
